--- a/app/templates/common/app.html
+++ b/app/templates/common/app.html
@@ -2,6 +2,7 @@
     <header ng-include="'templates/common/navbar.html'"></header>
     <div class="container-fluid">
         <div>
+            <toaster-container></toaster-container>
             <div ui-view></div>
         </div>
     </div>
