--- a/app/templates/common/navbar.html
+++ b/app/templates/common/navbar.html
@@ -8,14 +8,17 @@
             <div class="nav-item">
                 <a class="nav-link navbar-color active" ui-sref="app.home">Home <span class="sr-only">(current)</span></a>
             </div>
+            <!-- <div class="nav-item">
+                <a class="nav-link navbar-color" ui-sref="app.todo">Todo <span class="sr-only">(current)</span></a>
+            </div> -->
             <div class="nav-item">
-                    <a class="nav-link navbar-color" ui-sref="app.profile">Profile <span class="sr-only">(current)</span></a>
-                </div>
+                <a class="nav-link navbar-color" ui-sref="app.profile">Profile <span class="sr-only">(current)</span></a>
+            </div>
         </div>
         <div class="col-sm-4 text-right col-center padding-zero">
             <div>
                 <span title="logout" ng-click="vm.logout()"><i class="fa fa-power-off"></i></span>&nbsp;&nbsp;
-                <span><i class="fa fa-user"></i> Hi, {{vm.user.username}}</span>
+                <span><i class="fa fa-user"></i> Hi, {{vm.user.userName}}</span>
             </div>
         </div>
     </div>
