--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -11,7 +11,7 @@
                     <div ng-form="registration" class="p-3 mb-2" ng-submit="vm.login()">
                         <div class="form-group">
                             <label for="email">User Name:</label>
-                            <input type="text" class="form-control" ng-model="vm.loginCredentials.username" required>
+                            <input type="text" class="form-control" ng-model="vm.loginCredentials.userName" required>
                         </div>
                         <div class="form-group">
                             <label for="password">Password:</label>
