--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,30 +1,41 @@
 <div class="panel panel-default" ng-controller="profileController as vm">
-    <div class="panel-body row-margin-top">
+    <div class="panel-body">
         <div class="col-sm-6 col-md-offset-2">
             <div>
                 <h2>Profile</h2>
             </div>
-            <div ng-form="registration" class="p-3 mb-2">
+            <div ng-form="profile" class="p-3 mb-2">
+                <input type="file" id='fileUpload' file-Input style="visibility:hidden" ng-model="vm.file" ng-change="vm.fileUpload()">
                 <div class="form-group">
-                    <label for="email">User Name:</label>
-                    <input type="text" class="form-control" ng-model="vm.user.username" required>
+
+                    <img height="150" onclick="document.getElementById('fileUpload').click()" class="img-div" width="150" SRC={{vm.user.image}}>
+                    <span class="img-div fa fa-pencil" style="position: relative;
+                    left: -4.9vw;
+                    font-size:1.5em;"></span>
+                    </img>
+                    <label for="pwd">Welcome {{vm.user.userName}}</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="pwd">First Name:</label>
+                    <input type="text" class="form-control" ng-model="vm.user.firstName" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email Address:</label>
-                    <input type="email" class="form-control" id="email" ng-model="vm.user.email" required>
+                    <label for="pwd">Last Name:</label>
+                    <input type="text" class="form-control" ng-model="vm.user.lastName" required>
                 </div>
                 <div class="form-group">
-                    <label for="pwd">Role</label>
-                    <select class="form-control" required ng-model="vm.user.role">
-                                            <option value=''>select</option>
-                                            <option value="student">Student</option>
-                                            <option value="teacher">Teacher</option>
-                        </select>
+                    <label for="pwd">Address:</label>
+                    <textarea rows="4" class="form-control" ng-model="vm.user.address" />
                 </div>
-                <!-- <div class="checkbox">
-                                <label><input type="checkbox"> Remember me</label>
-                            </div> -->
-                <button class="btn btn-info" ng-disabled="registration.$pristine || registration.$invalid" ng-click="vm.update()">Update</button>
+                <div class="form-group">
+                    <label>Gender:</label> Male <input type="radio" required ng-checked="vm.user.gender=='M'" name="gender"
+                        ng-model="vm.user.gender" value='M' /> Female <input type="radio" ng-checked="vm.user.gender=='F'" name="gender"
+                        ng-model="vm.user.gender" value='F' />
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-info" ng-disabled="profile.$pristine || profile.$invalid" ng-click="vm.update()">Update</button>
+                </div>
             </div>
         </div>
     </div>
