--- a/app/templates/register/register.html
+++ b/app/templates/register/register.html
@@ -11,11 +11,23 @@
                     <div ng-form="registration" class="p-3 mb-2">
                         <div class="form-group">
                             <label for="email">User Name:</label>
-                            <input type="text" class="form-control" ng-model="vm.registration.username" required>
+                            <input type="text" class="form-control" ng-model="vm.registration.userName" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Email Address:</label>
                             <input type="email" class="form-control" id="email" ng-model="vm.registration.email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">First Name:</label>
+                            <input type="text" class="form-control" ng-model="vm.registration.firstName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Last Name:</label>
+                            <input type="text" class="form-control" ng-model="vm.registration.lastName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Address:</label>
+                            <textarea rows="4" class="form-control" ng-model="vm.registration.address" />
                         </div>
                         <div class="form-group">
                             <label for="pwd">Password:</label>
@@ -27,17 +39,13 @@
                                 required>
                         </div>
                         <div class="form-group">
-                            <label for="pwd">Role</label>
-                            <select class="form-control" required ng-model="vm.registration.role">
-                                                <option value=''>select</option>
-                                                <option value="student">Student</option>
-                                                <option value="teacher">Teacher</option>
-                            </select>
+                            <label>Gender:</label> Male <input type="radio" checked="vm.registration.gender=='M'" name="gender"
+                                ng-model="vm.registration.gender" value='M' /> Female <input type="radio" checked="vm.registration.gender=='F'"
+                                name="gender" ng-model="vm.registration.gender" value='F' />
                         </div>
-                        <!-- <div class="checkbox">
-                                    <label><input type="checkbox"> Remember me</label>
-                                </div> -->
-                        <button class="btn btn-info" ng-disabled="registration.$pristine || registration.$invalid" ng-click="vm.register()">Submit</button>
+                        <div class="form-group">
+                            <button class="btn btn-info" ng-disabled="registration.$pristine || registration.$invalid" ng-click="vm.register()">Register</button>
+                        </div>
                     </div>
                 </div>
             </div>
