--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -4,20 +4,44 @@
         <div class="row">
             <div class="col-sm-8 marginAuto">
                 <div class="row text-right margin-bottom-10">
-                    <div class='col-sm-4'>
+                    <div class='row col-sm-4'>
+                        <div class="col-sm-5" style="padding:0">
+                            <datepicker>
+                                <input class="form-control" placeholder="start date" style="width:100%" ng-model="vm.startDate" type="text" />
+                            </datepicker>
+                        </div>
+                        <div class="col-sm-4" style="padding:0">
+                            <datepicker>
+                                <input class="form-control" style="width:100%" placeholder="end date" ng-model="vm.endDate" type="text" />
+                            </datepicker>
+                        </div>
+                        <div class="col-sm-2" style="padding:0">
+                            <button ng-click="vm.getTodosBYStartEndDate()" class="btn btn-outline-info"><i class="fa fa-search"></i></button>
+                        </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="filter" ng-model="vm.filter.value" aria-describedby="btnGroupAddon">
-                            <span class="input-group-addon" id="btnGroupAddon">
-                                            <select ng-model='vm.filter.key'>
-                                                    <option value=''>filter</option>
-                                                    <option value='name'>Name</option>
-                                                    <option value='categories'>Categories</option>
-                                                    <option value='isPublic'>IsPublic</option>
-                                                    <option value='isCompleted'>IsCompleted</option>
-                                                </select>
-                            </span>
+                            <input ng-show="vm.filter.key!='categories'" type="text" class="form-control" placeholder="filter" ng-model="vm.filter.value"
+                                aria-describedby="btnGroupAddon">
+                            <select ng-show="vm.filter.key=='categories'" class="form-control" ng-model="vm.filter.value">
+                                <option value=''>select categories</option>
+                                <option value='work'>work</option>
+                                <option value='personal'>personal</option>
+                                <option value='home'>home</option>
+                                <option value='other'>other</option>
+                            </select>
+                            <select class="form-control" ng-model='vm.filter.key'>
+                                <option value=''>filter</option>
+                                <option value='name'>Name</option>
+                                <option value='categories'>Categories</option>
+                                <option value='isPublic'>IsPublic</option>
+                                <option value='isPending'>IsPending</option>
+                                <option value='isCompleted'>IsCompleted</option>
+                            </select>
+                            <button class="btn btn-info" ng-click="vm.clearFilters()">
+                                Clear Filters
+                            </button>
+
                         </div>
                     </div>
                     <div class="col-sm-2">
@@ -30,6 +54,7 @@
                         <th class="cursor-pointer" ng-click="vm.sort('name')">Name
                             <caret order="order" keyname="name" />
                         </th>
+                        <th>Date</th>
                         <th>Description</th>
                         <th>Category</th>
                         <th>Picture</th>
@@ -42,16 +67,6 @@
                         <th>Actions</th>
                     </tr>
                     <tr ng-repeat="todo in vm.todos | todofilter:vm.filter.key:vm.filter.value | orderBy:order['key']:order[order.key]" list-todo>
-                        <!-- <td>{{todo.id}}</td>
-                        <td>{{todo.name}}</td>
-                        <td>{{todo.description}}</td>
-                        <td>{{todo.categories.join(', ')}}</td>
-                        <td>{{todo.isPublic?'Yes':'No'}}</td>
-                        <td>{{todo.isCompleted?'Yes':'No'}}</td>
-                        <td>
-                            <button type="button" class="btn btn-outline-success" ng-click="vm.editTodo(todo.id)"><i class="fa fa-pencil"></i></button>
-                            <button type="button" class="btn btn-outline-danger" ng-click="vm.deleteTodo(todo.id)"><i class="fa fa-trash"></i></button>
-                        </td> -->
                     </tr>
                 </table>
                 <div ng-if="vm.todos.length==0" class='row text-center'>
