--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
     <div class="panel panel-default" ng-controller="loginController as vm">
+        <toaster-container></toaster-container>
         <div class="panel-body">
             <div class="row row-margin-top">
                 <div class="col-sm-6 marginAuto login-form-border">
