--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -7,12 +7,12 @@
                     <div class='row col-sm-4'>
                         <div class="col-sm-5" style="padding:0">
                             <datepicker>
-                                <input class="form-control" placeholder="start date" style="width:100%" ng-model="vm.startDate" type="text" />
+                                <input class="form-control" no-input placeholder="start date" style="width:100%" ng-model="vm.startDate" type="text" />
                             </datepicker>
                         </div>
                         <div class="col-sm-4" style="padding:0">
                             <datepicker>
-                                <input class="form-control" style="width:100%" placeholder="end date" ng-model="vm.endDate" type="text" />
+                                <input class="form-control" no-input style="width:100%" placeholder="end date" ng-model="vm.endDate" type="text" />
                             </datepicker>
                         </div>
                         <div class="col-sm-2" style="padding:0">
